# scraping

./: README.md  gas.js  main.py  main2.py  main3.py  pyproject.toml  登録商品リスト.xlsx
output/: rentals.csv
test/: test2.py
test/output/: result1.csv
