[tool.poetry]
name = "screenshot"
version = "0.1.0"
description = ""
authors = ["kinouchi yuta <nouchi19970217@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
google = "^3.0.0"
pydrive = "^1.3.1"
pandas = "^2.2.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
